--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./style.css">
   <title>Jonathan Jones</title>
 </head>
 <body>
-  <h1>Jonathan Jones - Website</h1>
+  <h1>Jonathan Jones</h1>
+  <h2>Games Development</h2>
+
+  <nav>
+    <ol>
+      <li>Home</li>
+      <li>Blog</li>
+      <li>Projects</li>
+      <li>Contact Info</li>
+    </ol>
+  </nav>
 </body>
 </html>
