Additional content added to html including sidebar and navbar content

--- a/index.html
+++ b/index.html
@@ -8,16 +8,44 @@
   <title>Jonathan Jones</title>
 </head>
 <body>
-  <h1>Jonathan Jones</h1>
-  <h2>Games Development</h2>
+  <header class="site-header">
+    <h1>Jonathan Jones</h1>
+    <h2>Games Development</h2>
 
-  <nav>
-    <ol>
-      <li>Home</li>
-      <li>Blog</li>
-      <li>Projects</li>
-      <li>Contact Info</li>
-    </ol>
-  </nav>
+    <nav class="navbar">
+      <ol class="nav-items">
+        <li><a href="">Home</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Projects</a></li>
+        <li><a href="">Contact Info</a></li>
+      </ol>
+    </nav>
+
+  </header>
+
+  <main class="site-content">
+
+    <div class="sidebar">
+      <ol class="sidebar-items">
+        <li><h3>Useful Links</h3>
+          <ul class="useful-links">
+            <li><a class="OSU-Link" target="_blank" href="http://main.oregonstate.edu">OSU Homepage</a></li>
+            <li><a class="GitHub-Link" target="_blank" href="https://github.com/jonesjonathan/Personal-Website">GitHub</a></li>
+            <li><a class="LinkedIn-Link" target="_blank" href="https://www.linkedin.com/in/jonathan-jones-44332214a/">LinkedIn</a></li>
+          </ul>
+        </li>
+        <li><h3>Search this page</h3>
+          <input type="text" placeholder="Search...">
+        </li>
+        <li><h3>Featured</h3>
+          <ul class="featured-items">
+            <li><a class="PolyDodge-Link" href="">PolyDodge</a></li>
+            <li><a class="Damgur-Link" href="">Damgur</a></li>
+          </ul>
+        </li>
+      </ol>
+    </div>
+
+  </main>
 </body>
 </html>
