Finished initial HTML structure.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
   <header class="site-header">
-    <h1>Jonathan Jones</h1>
-    <h2>Games Development</h2>
+    <h1 class="masthead">Jonathan Jones</h1>
+    <h2 class="subtext">Games Development</h2>
+  </header>
 
     <nav class="navbar">
       <ol class="nav-items">
@@ -20,8 +21,6 @@
         <li><a href="">Contact Info</a></li>
       </ol>
     </nav>
-
-  </header>
 
   <main class="site-content">
 
@@ -44,6 +43,10 @@
           </ul>
         </li>
       </ol>
+    </div>
+
+    <div class="page-content">
+      <p>Placeholder text</p>
     </div>
 
   </main>
