Initial CSS code finished.

--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./style.css">
-  <link href="https://fonts.googleapis.com/css?family=Bungee|Raleway" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Bungee|Raleway" rel="stylesheet">
   <title>Jonathan Jones</title>
 </head>
 <body>
   <header class="site-header">
-    <h1 class="masthead">Jonathan Jones</h1>
-    <h2 class="subtext">Games Development</h2>
+    <div class="header-text-container">
+      <h1 class="masthead">Jonathan Jones</h1>
+      <h2 class="subtext">Games Development</h2>
+    </div>
   </header>
 
     <nav class="navbar">
       <ol class="nav-items">
-        <li><a href="">Home</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Projects</a></li>
-        <li><a href="">Contact Info</a></li>
+        <li><a id="Home" href="">Home</a></li>
+        <li><a id="Blog" href="">Blog</a></li>
+        <li><a id="Projects" href="">Projects</a></li>
+        <li><a id="ContactInfo" href="">Contact Info</a></li>
       </ol>
     </nav>
 
@@ -27,17 +29,17 @@
 
     <div class="sidebar">
       <ol class="sidebar-items">
-        <li><h3>Useful Links</h3>
+        <li><h3 id="UsefulLinks">Useful Links</h3>
           <ul class="useful-links">
             <li><a class="OSU-Link" target="_blank" href="http://main.oregonstate.edu">OSU Homepage</a></li>
             <li><a class="GitHub-Link" target="_blank" href="https://github.com/jonesjonathan/Personal-Website">GitHub</a></li>
             <li><a class="LinkedIn-Link" target="_blank" href="https://www.linkedin.com/in/jonathan-jones-44332214a/">LinkedIn</a></li>
           </ul>
         </li>
-        <li><h3>Search this page</h3>
+        <li><h3 id="SearchThisPage">Search this page</h3>
           <input type="text" placeholder="Search...">
         </li>
-        <li><h3>Featured</h3>
+        <li><h3 id="Featured">Featured</h3>
           <ul class="featured-items">
             <li><a class="PolyDodge-Link" href="">PolyDodge</a></li>
             <li><a class="Damgur-Link" href="">Damgur</a></li>
