--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./mainStyle.css">
   <link href="https://fonts.googleapis.com/css?family=Bungee|Raleway" rel="stylesheet">
   <title>Jonathan Jones</title>
 </head>
@@ -26,30 +26,31 @@
     </nav>
 
   <main class="site-content">
-
-    <div class="sidebar">
-      <ol class="sidebar-items">
-        <li><h3 id="UsefulLinks">Useful Links</h3>
-          <ul class="useful-links">
-            <li><a class="OSU-Link" target="_blank" href="http://main.oregonstate.edu">OSU Homepage</a></li>
-            <li><a class="GitHub-Link" target="_blank" href="https://github.com/jonesjonathan/Personal-Website">GitHub</a></li>
-            <li><a class="LinkedIn-Link" target="_blank" href="https://www.linkedin.com/in/jonathan-jones-44332214a/">LinkedIn</a></li>
-          </ul>
-        </li>
-        <li><h3 id="SearchThisPage">Search this page</h3>
-          <input type="text" placeholder="Search...">
-        </li>
-        <li><h3 id="Featured">Featured</h3>
-          <ul class="featured-items">
-            <li><a class="PolyDodge-Link" href="">PolyDodge</a></li>
-            <li><a class="Damgur-Link" href="">Damgur</a></li>
-          </ul>
-        </li>
-      </ol>
-    </div>
-
     <div class="page-content">
-      <p>Placeholder text</p>
+      <div class="sidebar">
+        <ol class="sidebar-items">
+          <li><h3 id="UsefulLinks">Useful Links</h3>
+            <ul class="useful-links">
+              <li><a class="OSU-Link" target="_blank" href="http://main.oregonstate.edu">OSU Homepage</a></li>
+              <li><a class="GitHub-Link" target="_blank" href="https://github.com/jonesjonathan/Personal-Website">GitHub</a></li>
+              <li><a class="LinkedIn-Link" target="_blank" href="https://www.linkedin.com/in/jonathan-jones-44332214a/">LinkedIn</a></li>
+            </ul>
+          </li>
+          <li><h3 id="SearchThisPage">Search this page</h3>
+            <input type="text" placeholder="Search...">
+          </li>
+          <li><h3 id="Featured">Featured</h3>
+            <ul class="featured-items">
+              <li><a class="PolyDodge-Link" href="">PolyDodge</a></li>
+              <li><a class="Damgur-Link" href="">Damgur</a></li>
+            </ul>
+          </li>
+        </ol>
+      </div>
+      <div class="page-text">
+        <img id="devPhoto" src="resources\Senior Photo.jpg" alt="">
+        <h3 class = "box-title">Lorem IPSUM! - 1/12/2018</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
     </div>
 
   </main>
